--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My First Page</title>
+    <title>Taha ValizadehAslani</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>This is my first HTML page.</p>
+    <h1>Hello!</h1>
+    <p>This is my Github page.</p>
     <a href="https://github.com/TahaAslani">My GitHub</a>
 </body>
 </html>
