--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Hello!</h1>
-    <p>This is my Github page.</p>
+    <p>Taha ValizadehAslani.</p>
     <a href="https://github.com/TahaAslani">My GitHub</a>
     <br> 
     <a href="https://github.com/TahaAslani/TestHtml/blob/a1f10f32c1beb753c6f187195dd0fa34cae1d25d/Resume_TV.pdf">My CV</a>
