--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body>
 
     
-    <h1>Hello!</h1>
-    <p>Taha ValizadehAslani (PhD).</p>
+    <h1>Taha ValizadehAslani (PhD)</h1>
+<!--     <p>Taha ValizadehAslani (PhD).</p> -->
 
 
     
