--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
     
-    <h1>Taha ValizadehAslani (PhD)</h1>
+    <h1>Taha ValizadehAslani (Ph.D.)</h1>
 <!--     <p>Taha ValizadehAslani (PhD).</p> -->
 
 
