--- a/index.html
+++ b/index.html
@@ -3,244 +3,175 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Taha ValizadehAslani — Personal Website</title>
-  <meta name="description" content="Personal site for Taha ValizadehAslani — machine learning engineer and researcher.">
-  <meta name="color-scheme" content="light dark">
-  <!-- Open Graph for link previews -->
-  <meta property="og:title" content="Taha ValizadehAslani — Personal Website">
-  <meta property="og:description" content="Machine Learning Engineer • Researcher • Network Optimization">
-  <meta property="og:type" content="website">
-  <meta property="og:image" content="/og-image.png">
-  <meta property="og:url" content="https://example.com">
-  <link rel="icon" href="/favicon.ico">
+  <title>Taha ValizadehAslani</title>
+  <meta name="description" content="Personal site for Taha ValizadehAslani" />
+  <meta name="color-scheme" content="light dark" />
+  <link rel="icon" href="/favicon.ico" />
   <style>
+    /*
+      === Design goals ===
+      - Desktop-first, typographic, Swiss-style
+      - No rounded corners, no shadows, no gradients
+      - Clear vertical rhythm, generous whitespace
+      - Left rail with name + nav; content on the right
+    */
+
     :root {
-      --bg: #fcfcfd;
-      --bg-alt: #f3f4f6;
-      --text: #0f172a;
-      --muted: #475569;
-      --accent: #2563eb;
-      --card: #ffffff;
-      --border: #e5e7eb;
-      --shadow: 0 10px 25px rgba(0,0,0,.08);
-      --radius: 16px;
+      --bg: #ffffff;
+      --ink: #151515;
+      --ink-2: #545454;
+      --rule: #e4e4e4;
+      --accent: #1a4dd6; /* restrained blue for links */
+      --col-rail: 300px;   /* left rail width */
+      --col-gap: 56px;     /* gap between rail and content */
+      --measure: 68ch;     /* optimal reading width */
+      --leading: 1.55;     /* baseline */
     }
     @media (prefers-color-scheme: dark) {
       :root {
-        --bg: #0b1020;
-        --bg-alt: #0f172a;
-        --text: #e5e7eb;
-        --muted: #94a3b8;
-        --accent: #60a5fa;
-        --card: #0f172a;
-        --border: #1f2937;
-        --shadow: 0 10px 25px rgba(0,0,0,.35);
+        --bg: #0f1113;
+        --ink: #e9eaec;
+        --ink-2: #a1a6ad;
+        --rule: #2a2e33;
+        --accent: #84a7ff;
       }
     }
+
+    html { -webkit-text-size-adjust: 100%; }
     * { box-sizing: border-box; }
-    html { scroll-behavior: smooth; }
     body {
       margin: 0;
-      font: 16px/1.6 system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
-      color: var(--text);
-      background: radial-gradient(1200px 600px at 20% -10%, rgba(99,102,241,.08), transparent 60%),
-                  radial-gradient(900px 500px at 100% 10%, rgba(96,165,250,.08), transparent 60%),
-                  var(--bg);
+      background: var(--bg);
+      color: var(--ink);
+      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
+      line-height: var(--leading);
     }
-    .container { max-width: 980px; margin: 0 auto; padding: 24px; }
-    /* Header */
-    header { position: sticky; top: 0; backdrop-filter: saturate(180%) blur(6px); background: color-mix(in oklab, var(--bg) 85%, transparent); border-bottom: 1px solid var(--border); z-index: 50; }
-    .nav { display: flex; align-items: center; justify-content: space-between; gap: 16px; }
-    .brand { display: flex; align-items: center; gap: 12px; font-weight: 700; letter-spacing: .2px; }
-    .avatar { width: 36px; height: 36px; border-radius: 50%; object-fit: cover; border: 2px solid var(--border); }
-    .links a { text-decoration: none; color: var(--muted); margin-left: 18px; font-weight: 600; }
-    .links a:hover { color: var(--text); }
-    /* Hero */
-    .hero { padding: 72px 0 40px; display: grid; grid-template-columns: 1.2fr 1fr; gap: 32px; align-items: center; }
-    @media (max-width: 860px) { .hero { grid-template-columns: 1fr; padding-top: 48px; } }
-    .hero h1 { font-size: clamp(28px, 4vw, 44px); line-height: 1.15; margin: 0 0 10px; }
-    .hero p { margin: 0 0 24px; color: var(--muted); font-size: 18px; }
-    .buttons { display: flex; gap: 12px; flex-wrap: wrap; }
-    .btn { display:inline-flex; align-items:center; gap:10px; padding:12px 16px; border-radius: 999px; border:1px solid var(--border); text-decoration:none; font-weight:700; }
-    .btn.primary { background: var(--accent); color: white; border-color: color-mix(in oklab, var(--accent), black 10%); box-shadow: var(--shadow); }
-    .btn.primary:hover { filter: brightness(.98); transform: translateY(-1px); }
-    .btn.ghost:hover { background: var(--bg-alt); }
-    .hero-visual { position: relative; }
-    .card {
-      background: var(--card);
-      border: 1px solid var(--border);
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
-      padding: 20px;
-    }
-    .tag { display:inline-block; padding: 4px 10px; border-radius: 999px; border:1px solid var(--border); font-size: 12px; color: var(--muted); background: color-mix(in oklab, var(--bg), white 6%); }
-    /* Sections */
-    section { padding: 40px 0; }
-    h2 { font-size: clamp(22px, 3vw, 32px); margin: 0 0 16px; }
-    .muted { color: var(--muted); }
-    /* Projects grid */
-    .grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 16px; }
-    @media (max-width: 980px) { .grid { grid-template-columns: repeat(2, 1fr); } }
-    @media (max-width: 640px) { .grid { grid-template-columns: 1fr; } }
-    .project { text-decoration: none; color: inherit; transition: transform .15s ease; }
-    .project:hover { transform: translateY(-3px); }
-    .project h3 { margin: 8px 0 6px; font-size: 18px; }
-    .project p { margin: 0; color: var(--muted); font-size: 14px; }
+
+    /* Structure */
+    .wrap { display: grid; grid-template-columns: var(--col-rail) var(--col-gap) 1fr; min-height: 100dvh; }
+    .rail { padding: 48px 24px 48px 56px; border-right: 1px solid var(--rule); position: sticky; top: 0; align-self: start; height: 100dvh; }
+    .main { padding: 64px 56px 96px; max-width: 1200px; }
+
+    /* Rail content */
+    .name { font-family: ui-serif, Georgia, "Times New Roman", serif; font-weight: 700; letter-spacing: .2px; font-size: 24px; margin: 0 0 4px; }
+    .role { color: var(--ink-2); margin: 0 0 28px; font-size: 14px; }
+    nav a { display: block; text-decoration: none; color: var(--ink-2); padding: 6px 0; font-weight: 600; }
+    nav a:hover, nav a[aria-current="page"] { color: var(--ink); text-decoration: underline; text-underline-offset: 3px; }
+
+    /* Typography */
+    h1, h2, h3 { font-weight: 800; letter-spacing: 0; margin: 0; line-height: 1.2; }
+    h1 { font-size: 40px; margin-bottom: 12px; }
+    h2 { font-size: 24px; margin: 48px 0 12px; border-top: 1px solid var(--rule); padding-top: 24px; }
+    h3 { font-size: 18px; margin: 28px 0 6px; }
+    p { margin: 0 0 14px; max-width: var(--measure); color: var(--ink); }
+    .muted { color: var(--ink-2); }
+    a { color: var(--accent); text-decoration: none; }
+    a:hover { text-decoration: underline; text-underline-offset: 2px; }
+    ul { padding-left: 18px; margin: 0 0 14px; max-width: var(--measure); }
+
+    /* Components */
+    .intro { max-width: var(--measure); }
+    .meta { display: flex; gap: 14px; color: var(--ink-2); font-size: 14px; }
+
+    .projects { display: grid; grid-template-columns: repeat(2, minmax(280px, 1fr)); gap: 28px 40px; max-width: 1000px; }
+    .project { border-top: 1px solid var(--rule); padding-top: 16px; }
+    .project a.more { font-weight: 700; }
+
+    .contact dd, .contact dt { margin: 0; }
+    .contact dt { color: var(--ink-2); font-size: 12px; text-transform: uppercase; letter-spacing: .08em; margin-top: 18px; }
+
     /* Footer */
-    footer { border-top: 1px solid var(--border); padding: 28px 0; color: var(--muted); }
-    .social { display:flex; gap: 14px; align-items:center; }
-    .social a { display: inline-flex; align-items:center; gap:8px; color: var(--muted); text-decoration:none; font-weight:600; }
-    .social a:hover { color: var(--text); }
-    /* Small helpers */
-    .sr-only { position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border: 0; }
-  </style>
-  <script>
-    // Optional theme toggle (light/dark/system)
-    const applyTheme = (mode) => {
-      document.documentElement.dataset.theme = mode;
-      if (mode === 'light') document.documentElement.style.colorScheme = 'light';
-      else if (mode === 'dark') document.documentElement.style.colorScheme = 'dark';
-      else document.documentElement.style.colorScheme = 'light dark';
-      localStorage.setItem('theme', mode);
-    };
-    const saved = localStorage.getItem('theme');
-    if (saved) {
-      applyTheme(saved);
+    footer { border-top: 1px solid var(--rule); margin-top: 64px; padding-top: 16px; color: var(--ink-2); font-size: 14px; }
+
+    /* Responsiveness without looking "mobile-first" */
+    @media (max-width: 1100px) {
+      .wrap { grid-template-columns: 1fr; }
+      .rail { position: static; height: auto; border-right: none; border-bottom: 1px solid var(--rule); padding: 28px 24px; }
+      .main { padding: 40px 24px 64px; }
+      .projects { grid-template-columns: 1fr; }
     }
-    window.addEventListener('DOMContentLoaded', () => {
-      document.querySelectorAll('[data-theme]').forEach(btn => {
-        btn.addEventListener('click', () => applyTheme(btn.dataset.theme));
-      });
-    });
-  </script>
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Person",
-    "name": "Taha ValizadehAslani",
-    "url": "https://example.com",
-    "jobTitle": "Machine Learning Engineer",
-    "sameAs": [
-      "https://github.com/your-github",
-      "https://www.linkedin.com/in/your-linkedin"
-    ]
-  }
-  </script>
+  </style>
 </head>
 <body>
-  <header>
-    <div class="container nav">
-      <div class="brand">
-        <img src="/avatar.jpg" alt="Avatar" class="avatar" onerror="this.style.display='none'">
-        <span>Taha ValizadehAslani</span>
-      </div>
-      <nav class="links">
-        <a href="#about">About</a>
-        <a href="#projects">Projects</a>
+  <div class="wrap">
+    <!-- LEFT RAIL -->
+    <aside class="rail">
+      <h1 class="name">Taha ValizadehAslani</h1>
+      <p class="role">Machine Learning Engineer</p>
+      <nav>
+        <a href="#about" aria-current="page">About</a>
+        <a href="#work">Selected Work</a>
         <a href="#contact">Contact</a>
-        <span class="sr-only">Theme</span>
-        <a href="#" class="sr-only">Theme:</a>
-        <a href="#" data-theme="light" aria-label="Light mode" title="Light">☀️</a>
-        <a href="#" data-theme="dark" aria-label="Dark mode" title="Dark">🌙</a>
-        <a href="#" data-theme="system" aria-label="System theme" title="System">🖥️</a>
+        <a href="/Taha_ValizadehAslani_Resume.pdf">Résumé</a>
       </nav>
-    </div>
-  </header>
+    </aside>
 
-  <main class="container">
-    <!-- HERO -->
-    <section class="hero">
-      <div>
-        <span class="tag">Machine Learning • Network Optimization</span>
-        <h1>Hi, I'm Taha — I build reliable data & ML systems and love turning complex networks into clear decisions.</h1>
-        <p class="muted">PhD engineer. Focused on forecasting, optimization (GA/PSO/ACO), and large‑scale data pipelines in Databricks & Spark.</p>
-        <div class="buttons">
-          <a class="btn primary" href="#projects">See my work</a>
-          <a class="btn ghost" href="/Taha_ValizadehAslani_Resume.pdf" download>Download résumé</a>
-          <a class="btn ghost" href="#contact">Contact me</a>
+    <!-- GAP column (visual breathing space) -->
+    <div aria-hidden="true"></div>
+
+    <!-- MAIN CONTENT -->
+    <main class="main">
+      <section id="about" class="intro">
+        <h1>Building clear, reliable ML & data systems.</h1>
+        <p class="muted">I work at the intersection of <strong>optimization</strong> (GA/PSO/ACO), <strong>forecasting</strong> (ETS/Theta/VAR), and <strong>data engineering</strong> (Spark/Databricks/AWS). I care about simple models that do the job and pipelines teams can trust.</p>
+        <div class="meta" style="margin-top:8px">
+          <span>Philadelphia, USA</span>
+          <span>•</span>
+          <span><a href="mailto:your.email@example.com">your.email@example.com</a></span>
+          <span>•</span>
+          <span><a href="https://github.com/your-github" target="_blank" rel="noreferrer noopener">GitHub</a></span>
+          <span>•</span>
+          <span><a href="https://www.linkedin.com/in/your-linkedin" target="_blank" rel="noreferrer noopener">LinkedIn</a></span>
         </div>
-      </div>
-      <div class="hero-visual">
-        <div class="card">
-          <img src="/cover.jpg" alt="Cover visual" style="width:100%; border-radius:12px; border:1px solid var(--border);" onerror="this.style.display='none'">
-          <p class="muted" style="margin-top:12px">Currently exploring <strong>multi‑objective PSO</strong> for network design and <strong>time‑series ensembles</strong> for city‑level scaling.</p>
+      </section>
+
+      <section id="work">
+        <h2>Selected Work</h2>
+        <div class="projects">
+          <article class="project">
+            <h3>Core‑Site Network Design via PSO</h3>
+            <p class="muted">Binary‑vector PSO for cost and resiliency with SRLG constraints and fast feasibility checks.</p>
+            <p><a class="more" href="#" target="_blank" rel="noreferrer noopener">Project notes →</a></p>
+          </article>
+          <article class="project">
+            <h3>City‑Level Traffic Forecasts</h3>
+            <p class="muted">ETS/Theta ensembles with reconciliation to national totals and practical error bounds.</p>
+            <p><a class="more" href="#" target="_blank" rel="noreferrer noopener">Methodology →</a></p>
+          </article>
+          <article class="project">
+            <h3>Quality‑Aware Data Pipelines</h3>
+            <p class="muted">Network utilization monitoring with schema checks, anomaly flags, and lean alerting.</p>
+            <p><a class="more" href="#" target="_blank" rel="noreferrer noopener">Pipeline overview →</a></p>
+          </article>
+          <article class="project">
+            <h3>LLM‑Aided Experiment Tracking</h3>
+            <p class="muted">Lightweight experiment ledger integrating metrics, configs, and plain‑English summaries.</p>
+            <p><a class="more" href="#" target="_blank" rel="noreferrer noopener">Read more →</a></p>
+          </article>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- ABOUT -->
-    <section id="about">
-      <h2>About</h2>
-      <p class="muted">I'm a machine learning engineer based in Philadelphia. I work across optimization, forecasting, and data engineering. I enjoy designing algorithms that balance performance with clarity, and building tidy pipelines teams can trust.</p>
-      <ul>
-        <li>PhD in Engineering (thesis on large language models).</li>
-        <li>10+ years of hands‑on ML and statistical modeling.</li>
-        <li>Comfortable across Python, Spark/Databricks, and AWS.</li>
-      </ul>
-    </section>
-
-    <!-- PROJECTS -->
-    <section id="projects">
-      <h2>Selected Projects</h2>
-      <div class="grid">
-        <a class="project card" href="#" target="_blank" rel="noreferrer noopener">
-          <span class="tag">Optimization</span>
-          <h3>Core‑Site Network Design via PSO</h3>
-          <p>Binary‑vector PSO minimizing cost & maximizing resiliency; custom constraints and SRLG awareness.</p>
-        </a>
-        <a class="project card" href="#" target="_blank" rel="noreferrer noopener">
-          <span class="tag">Forecasting</span>
-          <h3>City‑Level Traffic Forecasts</h3>
-          <p>ETS/Theta ensembles scaled to national totals with constrained reconciliation.</p>
-        </a>
-        <a class="project card" href="#" target="_blank" rel="noreferrer noopener">
-          <span class="tag">Data Engineering</span>
-          <h3>Quality‑Aware Pipelines</h3>
-          <p>Monitoring network utilization with built‑in data quality checks and alerts.</p>
-        </a>
-      </div>
-    </section>
-
-    <!-- CONTACT -->
-    <section id="contact">
-      <h2>Contact</h2>
-      <p class="muted">Email me or use the form — I’ll get back to you soon.</p>
-      <div class="card" style="display:grid; gap:12px;">
-        <div class="social">
-          <a href="mailto:your.email@example.com" aria-label="Email">✉️ <span>your.email@example.com</span></a>
-          <a href="https://github.com/your-github" target="_blank" rel="noreferrer noopener" aria-label="GitHub">🧑‍💻 <span>GitHub</span></a>
-          <a href="https://www.linkedin.com/in/your-linkedin" target="_blank" rel="noreferrer noopener" aria-label="LinkedIn">💼 <span>LinkedIn</span></a>
-        </div>
-        <form action="https://formspree.io/f/your-form-id" method="POST" style="display:grid; gap:10px;">
-          <label>
-            <span class="sr-only">Your email</span>
-            <input name="email" type="email" required placeholder="Your email" style="width:100%; padding:12px 14px; border:1px solid var(--border); border-radius:10px; background:var(--bg); color:var(--text);">
-          </label>
-          <label>
-            <span class="sr-only">Message</span>
-            <textarea name="message" rows="4" required placeholder="Your message" style="width:100%; padding:12px 14px; border:1px solid var(--border); border-radius:10px; background:var(--bg); color:var(--text);"></textarea>
-          </label>
-          <button class="btn primary" style="width:max-content;">Send</button>
-        </form>
-      </div>
-    </section>
-
-    <footer>
-      <div class="container" style="display:flex; justify-content:space-between; gap:12px; flex-wrap:wrap;">
-        <span>© <span id="year"></span> Taha ValizadehAslani</span>
-        <div class="social">
-          <a href="/Taha_ValizadehAslani_Resume.pdf">Résumé</a>
-          <a href="#about">About</a>
-          <a href="#projects">Projects</a>
-          <a href="#contact">Contact</a>
-        </div>
-      </div>
-    </footer>
-  </main>
+      <section id="contact">
+        <h2>Contact</h2>
+        <dl class="contact">
+          <dt>Email</dt>
+          <dd><a href="mailto:your.email@example.com">your.email@example.com</a></dd>
+          <dt>GitHub</dt>
+          <dd><a href="https://github.com/your-github" target="_blank" rel="noreferrer noopener">github.com/your-github</a></dd>
+          <dt>LinkedIn</dt>
+          <dd><a href="https://www.linkedin.com/in/your-linkedin" target="_blank" rel="noreferrer noopener">linkedin.com/in/your-linkedin</a></dd>
+          <dt>Résumé</dt>
+          <dd><a href="/Taha_ValizadehAslani_Resume.pdf">PDF</a></dd>
+        </dl>
+        <footer>
+          © <span id="y"></span> Taha ValizadehAslani
+        </footer>
+      </section>
+    </main>
+  </div>
 
   <script>
-    // update footer year
-    document.getElementById('year').textContent = new Date().getFullYear();
+    document.getElementById('y').textContent = new Date().getFullYear();
   </script>
 </body>
 </html>
