--- a/index.html
+++ b/index.html
@@ -128,11 +128,12 @@
       <section id="work">
         <h2>Selected Work</h2>
         <div class="projects">
-          <article class="project">
-            <h3>Core‑Site Network Design via PSO</h3>
-            <p class="muted">Binary‑vector PSO for cost and resiliency with SRLG constraints and fast feasibility checks.</p>
-            <p><a class="more" href="#" target="_blank" rel="noreferrer noopener">Project notes →</a></p>
-          </article>
+        <article class="project">
+          <h3>Core-Site Network Design via PSO</h3>
+          <img src="images/AMR.png" alt="PSO network design diagram" style="max-width:100%; height:auto; margin:8px 0;">
+          <p class="muted">Binary-vector PSO for cost and resiliency…</p>
+          <p><a class="more" href="#">Project notes →</a></p>
+        </article>
           <article class="project">
             <h3>City‑Level Traffic Forecasts</h3>
             <p class="muted">ETS/Theta ensembles with reconciliation to national totals and practical error bounds.</p>
@@ -175,3 +176,4 @@
   </script>
 </body>
 </html>
+
