--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <h2>Selected Work</h2>
         <div class="projects">
         <article class="project">
-          <h3>Core-Site Network Design via PSO</h3>
+          <h3>AMR</h3>
           <img src="images/AMR.png" alt="PSO network design diagram" style="max-width:100%; height:auto; margin:8px 0;">
           <p class="muted">Binary-vector PSO for cost and resiliency…</p>
           <p><a class="more" href="#">Project notes →</a></p>
@@ -176,4 +176,5 @@
   </script>
 </body>
 </html>
+
 
