--- a/index.html
+++ b/index.html
@@ -8,24 +8,16 @@
   <meta name="color-scheme" content="light dark" />
   <link rel="icon" href="/favicon.ico" />
   <style>
-    /*
-      === Design goals ===
-      - Desktop-first, typographic, Swiss-style
-      - No rounded corners, no shadows, no gradients
-      - Clear vertical rhythm, generous whitespace
-      - Left rail with name + nav; content on the right
-    */
-
     :root {
       --bg: #ffffff;
       --ink: #151515;
       --ink-2: #545454;
       --rule: #e4e4e4;
-      --accent: #1a4dd6; /* restrained blue for links */
-      --col-rail: 300px;   /* left rail width */
-      --col-gap: 56px;     /* gap between rail and content */
-      --measure: 68ch;     /* optimal reading width */
-      --leading: 1.55;     /* baseline */
+      --accent: #1a4dd6;
+      --col-rail: 300px;
+      --col-gap: 56px;
+      --measure: 68ch;
+      --leading: 1.55;
     }
     @media (prefers-color-scheme: dark) {
       :root {
@@ -36,7 +28,6 @@
         --accent: #84a7ff;
       }
     }
-
     html { -webkit-text-size-adjust: 100%; }
     * { box-sizing: border-box; }
     body {
@@ -46,20 +37,14 @@
       font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
       line-height: var(--leading);
     }
-
-    /* Structure */
     .wrap { display: grid; grid-template-columns: var(--col-rail) var(--col-gap) 1fr; min-height: 100dvh; }
     .rail { padding: 48px 24px 48px 56px; border-right: 1px solid var(--rule); position: sticky; top: 0; align-self: start; height: 100dvh; }
     .main { padding: 64px 56px 96px; max-width: 1200px; }
-
-    /* Rail content */
-    .name { font-family: ui-serif, Georgia, "Times New Roman", serif; font-weight: 700; letter-spacing: .2px; font-size: 24px; margin: 0 0 4px; }
+    .name { font-family: ui-serif, Georgia, "Times New Roman", serif; font-weight: 700; font-size: 24px; margin: 0 0 4px; }
     .role { color: var(--ink-2); margin: 0 0 28px; font-size: 14px; }
     nav a { display: block; text-decoration: none; color: var(--ink-2); padding: 6px 0; font-weight: 600; }
     nav a:hover, nav a[aria-current="page"] { color: var(--ink); text-decoration: underline; text-underline-offset: 3px; }
-
-    /* Typography */
-    h1, h2, h3 { font-weight: 800; letter-spacing: 0; margin: 0; line-height: 1.2; }
+    h1, h2, h3 { font-weight: 800; margin: 0; line-height: 1.2; }
     h1 { font-size: 40px; margin-bottom: 12px; }
     h2 { font-size: 24px; margin: 48px 0 12px; border-top: 1px solid var(--rule); padding-top: 24px; }
     h3 { font-size: 18px; margin: 28px 0 6px; }
@@ -68,33 +53,23 @@
     a { color: var(--accent); text-decoration: none; }
     a:hover { text-decoration: underline; text-underline-offset: 2px; }
     ul { padding-left: 18px; margin: 0 0 14px; max-width: var(--measure); }
-
-    /* Components */
     .intro { max-width: var(--measure); }
     .meta { display: flex; gap: 14px; color: var(--ink-2); font-size: 14px; }
-
-    .projects { display: grid; grid-template-columns: repeat(2, minmax(280px, 1fr)); gap: 28px 40px; max-width: 1000px; }
+    .projects { display: grid; grid-template-columns: 1fr; gap: 40px; max-width: 1000px; }
     .project { border-top: 1px solid var(--rule); padding-top: 16px; }
-    .project a.more { font-weight: 700; }
-
+    .project img { max-width: 100%; height: auto; margin: 10px 0; }
     .contact dd, .contact dt { margin: 0; }
     .contact dt { color: var(--ink-2); font-size: 12px; text-transform: uppercase; letter-spacing: .08em; margin-top: 18px; }
-
-    /* Footer */
     footer { border-top: 1px solid var(--rule); margin-top: 64px; padding-top: 16px; color: var(--ink-2); font-size: 14px; }
-
-    /* Responsiveness without looking "mobile-first" */
     @media (max-width: 1100px) {
       .wrap { grid-template-columns: 1fr; }
       .rail { position: static; height: auto; border-right: none; border-bottom: 1px solid var(--rule); padding: 28px 24px; }
       .main { padding: 40px 24px 64px; }
-      .projects { grid-template-columns: 1fr; }
     }
   </style>
 </head>
 <body>
   <div class="wrap">
-    <!-- LEFT RAIL -->
     <aside class="rail">
       <h1 class="name">Taha ValizadehAslani</h1>
       <p class="role">Machine Learning Engineer</p>
@@ -105,15 +80,11 @@
         <a href="/Taha_ValizadehAslani_Resume.pdf">Résumé</a>
       </nav>
     </aside>
-
-    <!-- GAP column (visual breathing space) -->
-    <div aria-hidden="true"></div>
-
-    <!-- MAIN CONTENT -->
+    <div></div>
     <main class="main">
       <section id="about" class="intro">
         <h1>Building clear, reliable ML & data systems.</h1>
-        <p class="muted">I work at the intersection of <strong>optimization</strong> (GA/PSO/ACO), <strong>forecasting</strong> (ETS/Theta/VAR), and <strong>data engineering</strong> (Spark/Databricks/AWS). I care about simple models that do the job and pipelines teams can trust.</p>
+        <p class="muted">I work at the intersection of <strong>optimization</strong>, <strong>forecasting</strong>, and <strong>data engineering</strong>. I care about simple models that do the job and pipelines teams can trust.</p>
         <div class="meta" style="margin-top:8px">
           <span>Philadelphia, USA</span>
           <span>•</span>
@@ -124,34 +95,36 @@
           <span><a href="https://www.linkedin.com/in/your-linkedin" target="_blank" rel="noreferrer noopener">LinkedIn</a></span>
         </div>
       </section>
-
       <section id="work">
         <h2>Selected Work</h2>
         <div class="projects">
-        <article class="project">
-          <h3>AMR</h3>
-          <img src="images/AMR.png" alt="PSO network design diagram" style="max-width:100%; height:auto; margin:8px 0;">
-          <p class="muted">Binary-vector PSO for cost and resiliency…</p>
-          <p><a class="more" href="#">Project notes →</a></p>
-        </article>
           <article class="project">
-            <h3>City‑Level Traffic Forecasts</h3>
-            <p class="muted">ETS/Theta ensembles with reconciliation to national totals and practical error bounds.</p>
-            <p><a class="more" href="#" target="_blank" rel="noreferrer noopener">Methodology →</a></p>
+            <h3>Amino Acid k-mer Feature Extraction for Quantitative Antimicrobial Resistance (AMR) Prediction</h3>
+            <img src="images/AMR.png" alt="Visualization of amino-acid k-mer features for AMR prediction" style="max-width:100%; height:auto; margin:8px 0;">
+            <p class="muted">Microbes can adapt over time, developing resistance to antibiotics—a phenomenon known as antimicrobial resistance (AMR). Once this resistance emerges, treating infections becomes much more difficult, often requiring stronger or alternative antibiotics, many of which may carry greater risks. Misuse and overuse of antibiotics have accelerated this process, putting constant evolutionary pressure on microbes and driving the rise of AMR. Today, this issue is widely regarded as one of the most serious public-health threats, with the potential to trigger crises comparable to pandemics if effective treatments are unavailable.</p>
+            <p class="muted">The aim of this project was to design and test machine learning approaches that leverage bacterial genome sequences in two ways: first, to estimate the minimum antibiotic dosage needed to combat an infection; and second, to pinpoint mutations or genes that contribute to resistance. I introduced a new feature extraction method, counting Amino-Acid k-mers, enables machine learning models to recognize recurring patterns in amino acid sequences within bacterial genes. I compared the proposed method to the existing methods, such as counting nucleotide (NT) k-mers, gene searching, and Single-nucleotide polymorphism (SNP) calling. The proposed approach not only matches or surpasses the accuracy of current techniques for predicting dosage but also offers researchers deeper insight into how resistance arises at the molecular level.</p>
           </article>
+
           <article class="project">
-            <h3>Quality‑Aware Data Pipelines</h3>
-            <p class="muted">Network utilization monitoring with schema checks, anomaly flags, and lean alerting.</p>
-            <p><a class="more" href="#" target="_blank" rel="noreferrer noopener">Pipeline overview →</a></p>
+            <h3>PharmBERT</h3>
+            <img src="images/PharmBERT.jpeg" alt="PharmBERT concept art illustrating domain-specific pretraining for drug labels" style="max-width:100%; height:auto; margin:8px 0;">
+            <p class="muted">Pharmaceutical text found on drug labels possesses distinct features that differentiate it significantly from the regular text. This specificity stems from the specialized language, terminology, and regulatory requirements that shape the drug label domain. As a consequence, a generic large language model (LLM), often known as a vanilla model might not exhibit optimal effectiveness when applied to the drug label text. This is primarily because such generic models lack the domain-specific knowledge required to accurately interpret and process the nuances and specialized idiosyncrasies inherent in pharmaceutical texts.</p>
+            <p class="muted">This is where PharmBERT comes into play. Developed for the US Food and Drug Administration (FDA), PharmBERT is not just another addition to the family of BERT models; it is a purpose-built, specialized model that has been meticulously trained to grasp and interpret the unique aspects of pharmaceutical text, particularly drug labels. This model is designed to bridge the gap between general language processing capabilities and the specific demands of the drug label domain. By focusing on the peculiarities of pharmaceutical language, PharmBERT aims to provide more accurate, reliable, and contextually relevant insights from drug label texts than what would be achievable with a general-purpose model. In creating PharmBERT, we have not only leveraged the powerful architecture of BERT models but also enriched it with a training regime that includes a vast and diverse range of pharmaceutical texts. This specialized training ensures that PharmBERT is adept at handling the kind of linguistic challenges that are typical in drug labels, such as complex compound names, medical terminology, and regulatory language. The outcome is a model that is finely tuned to deliver enhanced performance in the analysis of drug label text, thereby offering a valuable tool for pharmaceutical companies, healthcare professionals, and regulatory bodies in their endeavors to understand and utilize the wealth of information contained in drug labels.</p>
           </article>
+
           <article class="project">
-            <h3>LLM‑Aided Experiment Tracking</h3>
-            <p class="muted">Lightweight experiment ledger integrating metrics, configs, and plain‑English summaries.</p>
-            <p><a class="more" href="#" target="_blank" rel="noreferrer noopener">Read more →</a></p>
+            <h3>Two-stage fine-tuning for learning class-imbalanced data</h3>
+            <p class="muted">In practical classification scenarios, it's common to encounter an imbalanced or long tailed distribution of classes. This situation arises when certain classes within the dataset, known as minority classes, are represented by a relatively small number of samples, while others, referred to as majority classes, are characterized by a significantly larger number of samples. This non-uniform distribution of samples among classes presents a challenge to a wide array of machine learning algorithms. This issue is further exacerbated if the selected performance metric values all classes equally, irrespective of their frequency in the dataset, for reasons such as fairness and inclusivity or because of an intrinsic interest in the minority class.</p>
+            <p class="muted">To cope with these challenges, a simple modification of standard fine-tuning is employed: Two-stage fine-tuning. In Stage 1, the final layer of the pretrained model is pre-finetuned. The pre-finetuning can be done either by training the last layer with class-balanced augmented data, generated using ChatGPT, or with a class-balanced reweighting method used with the original data. In Stage 2, the standard fine-tuning is performed. This modification has several benefits: (1) it leverages pretrained representations by only finetuning a small portion of the model parameters while keeping the rest untouched; (2) it allows the model to learn an initial representation of the specific task; and importantly (3) it protects the learning of tail classes from being at a disadvantage during the model updating. The experimental results show that the proposed two-stage fine-tuning outperforms vanilla fine-tuning and state-of-the-art methods on the above datasets.</p>
+          </article>
+
+          <article class="project">
+            <h3>Mathematical analysis of error control performance of IS-LDPC codes</h3>
+            <p class="muted">Peak-to-Average Power Ratio (PAPR) is a major shortcoming of Orthogonal Frequency Division Multiplexing (OFDM) systems. One promising solution to this issue is the use of Invertible-Subset Low-Density Parity-Check (IS-LDPC) codes. Although IS-LDPC codes are particularly effective at controlling PAPR with low search complexity, their error-control performance degrades as the number of invertible subsets increases.</p>
+            <p class="muted">To investigate the reasons for this performance degradation, I conducted a mathematical analysis of the code construction and proved four theorems that determine the probability of key events in construction of such codes, while also establishing bounds on the decisions that influence their performance. Based on these theorems, I proposed a heuristic search method designed to enhance the error-control performance of IS-LDPC codes, while maintaining their favorable PAPR control characteristics and low search complexity.</p>
           </article>
         </div>
       </section>
-
       <section id="contact">
         <h2>Contact</h2>
         <dl class="contact">
@@ -170,11 +143,8 @@
       </section>
     </main>
   </div>
-
   <script>
     document.getElementById('y').textContent = new Date().getFullYear();
   </script>
 </body>
 </html>
-
-
