--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <h3>Mathematical analysis of error control performance of IS-LDPC codes</h3>
             <p class="muted">Peak-to-Average Power Ratio (PAPR) is a major shortcoming of Orthogonal Frequency Division Multiplexing (OFDM) systems. One promising solution to this issue is the use of Invertible-Subset Low-Density Parity-Check (IS-LDPC) codes. Although IS-LDPC codes are particularly effective at controlling PAPR with low search complexity, their error-control performance degrades as the number of invertible subsets increases.</p>
             <p class="muted">To investigate the reasons for this performance degradation, I conducted a mathematical analysis of the code construction and proved four theorems that determine the probability of key events in construction of such codes, while also establishing bounds on the decisions that influence their performance. Based on these theorems, I proposed a heuristic search method designed to enhance the error-control performance of IS-LDPC codes, while maintaining their favorable PAPR control characteristics and low search complexity.</p>
-            <img src="images/IS-LDPC-png" alt="Mathematical analysis of construction of IS-LDPC codes" style="max-width:100%; height:auto; margin:8px 0;">
+            <img src="images/IS-LDPC.png" alt="Mathematical analysis of construction of IS-LDPC codes" style="max-width:100%; height:auto; margin:8px 0;">
           </article>
         </div>
       </section>
@@ -150,6 +150,7 @@
   </script>
 </body>
 </html>
+
 
 
 
