--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
       .wrap { grid-template-columns: 1fr; }
       .rail { position: static; height: auto; border-right: none; border-bottom: 1px solid var(--rule); padding: 28px 24px; }
       .main { padding: 40px 24px 64px; }
+
+
+    .project img {
+    display: block;
+    max-width: 68ch;  /* same as paragraph text width */
+    width: 100%;
+    height: auto;
+    margin: 12px auto;
+  }
     }
   </style>
 </head>
@@ -150,6 +159,7 @@
   </script>
 </body>
 </html>
+
 
 
 
