--- a/index.html
+++ b/index.html
@@ -97,11 +97,13 @@
         <div class="meta" style="margin-top:8px">
           <span>Philadelphia, USA</span>
           <span>•</span>
-          <span><a href="mailto:your.email@example.com">your.email@example.com</a></span>
+          <span><a href="mailto:taha.valizadeh@gmail.com">taha.valizadeh@gmail.com</a></span>
           <span>•</span>
-          <span><a href="https://github.com/your-github" target="_blank" rel="noreferrer noopener">GitHub</a></span>
+          <span><a href="https://scholar.google.com/citations?user=WxaHx0sAAAAJ&hl=en">Google Scholar</a></span>
+          <span>•</span
+          <span><a href="https://github.com/TahaAslani" target="_blank" rel="noreferrer noopener">GitHub</a></span>
           <span>•</span>
-          <span><a href="https://www.linkedin.com/in/your-linkedin" target="_blank" rel="noreferrer noopener">LinkedIn</a></span>
+          <span><a href="https://www.linkedin.com/in/taha-valizadehaslani-699538124" target="_blank" rel="noreferrer noopener">LinkedIn</a></span>
         </div>
       </section>
       <section id="work">
@@ -159,6 +161,7 @@
   </script>
 </body>
 </html>
+
 
 
 
