--- a/index.html
+++ b/index.html
@@ -142,13 +142,13 @@
         <h2>Contact</h2>
         <dl class="contact">
           <dt>Email</dt>
-          <dd><a href="mailto:your.email@example.com">your.email@example.com</a></dd>
+          <dd><a href="taha.valizadeh@gmail.com">taha.valizadeh@gmail.com</a></dd>
           <dt>GitHub</dt>
-          <dd><a href="https://github.com/your-github" target="_blank" rel="noreferrer noopener">github.com/your-github</a></dd>
+          <dd><a href="https://github.com/TahaAslani" target="_blank" rel="noreferrer noopener">github.com/TahaAslani</a></dd>
           <dt>LinkedIn</dt>
-          <dd><a href="https://www.linkedin.com/in/your-linkedin" target="_blank" rel="noreferrer noopener">linkedin.com/in/your-linkedin</a></dd>
+          <dd><a href="https://www.linkedin.com/in/taha-valizadehaslani-699538124" target="_blank" rel="noreferrer noopener">linkedin.com/in/taha-valizadehaslani-699538124</a></dd>
           <dt>Résumé</dt>
-          <dd><a href="/Taha_ValizadehAslani_Resume.pdf">PDF</a></dd>
+          <dd><a href="/Resume_TV.pdf">PDF</a></dd>
         </dl>
         <footer>
           © <span id="y"></span> Taha ValizadehAslani
@@ -161,6 +161,7 @@
   </script>
 </body>
 </html>
+
 
 
 
