--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <dt>LinkedIn</dt>
           <dd><a href="https://www.linkedin.com/in/taha-valizadehaslani-699538124" target="_blank" rel="noreferrer noopener">linkedin.com/in/taha-valizadehaslani-699538124</a></dd>
           <dt>Résumé</dt>
-          <dd><a href="/Resume_TV.pdf">PDF</a></dd>
+          <dd><a href="https://drive.google.com/file/d/1uOUNj2PBIcHeJd35O1pCTRXo033M0xyq/view?usp=sharing">PDF</a></dd>
         </dl>
         <footer>
           © <span id="y"></span> Taha ValizadehAslani
@@ -161,6 +161,7 @@
   </script>
 </body>
 </html>
+
 
 
 
