--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <a href="#about" aria-current="page">About</a>
         <a href="#work">Selected Work</a>
         <a href="#contact">Contact</a>
-        <a href="/Taha_ValizadehAslani_Resume.pdf">Résumé</a>
+        <a href="https://drive.google.com/file/d/1uOUNj2PBIcHeJd35O1pCTRXo033M0xyq/view?usp=sharing">Résumé</a>
       </nav>
     </aside>
     <div></div>
@@ -161,6 +161,7 @@
   </script>
 </body>
 </html>
+
 
 
 
