--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
     <div></div>
     <main class="main">
       <section id="about" class="intro">
-        <h1>Building clear, reliable ML & data systems.</h1>
-        <p class="muted">I work at the intersection of <strong>optimization</strong>, <strong>forecasting</strong>, and <strong>data engineering</strong>. I care about simple models that do the job and pipelines teams can trust.</p>
+        <h1>Bridging Theory & Practice.</h1>
+        <p class="muted">I work on <strong>Machine learning</strong>, <strong>Natural language processing</strong>, <strong>Data science</strong>,  and <strong>Information Theory</strong>. I care about models that not only get the job done, but also are theoretically proven to be optimal.</p>
         <div class="meta" style="margin-top:8px">
           <span>Philadelphia, USA</span>
           <span>•</span>
@@ -177,6 +177,7 @@
   </script>
 </body>
 </html>
+
 
 
 
