--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <body>
   <div class="wrap">
     <aside class="rail">
-      <h1 class="name">Taha ValizadehAslani, Ph.D.</h1>
+      <h1 class="name">Taha ValizadehAslani</h1>
       <p class="role">Machine Learning Engineer | Ph.D. in Engineering</p>
       <nav>
         <a href="#about" aria-current="page">About</a>
@@ -177,6 +177,7 @@
   </script>
 </body>
 </html>
+
 
 
 
