--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="meta" style="margin-top:8px">
           <span>Philadelphia, USA</span>
           <span>•</span>
-          <span><a href="mailto:taha.valizadeh@gmail.com">taha.valizadeh@gmail.com</a></span>
+          <span><a href="mailto:taha.valizadeh@gmail.com">email</a></span>
           <span>•</span>
           <span><a href="https://scholar.google.com/citations?user=WxaHx0sAAAAJ&hl=en">Google Scholar</a></span>
           <span>•</span
@@ -171,6 +171,7 @@
   </script>
 </body>
 </html>
+
 
 
 
