--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     <aside class="rail">
       <h1 class="name">Taha ValizadehAslani</h1>
       <p class="role">Machine Learning Engineer | Ph.D. in Engineering</p>
+      <p></p>Philadelphia, USA</p>
       <nav>
         <a href="#about" aria-current="page">About</a>
         <a href="#work">Selected Work</a>
@@ -94,7 +95,6 @@
       <section id="about" class="intro">
         <h1>Theory in Service of Practice</h1>
         <p class="muted">I work on <strong>Machine learning</strong>, <strong>Natural language processing</strong>, <strong>Data science</strong>,  and <strong>Information Theory</strong>. I care about models that not only get the job done, but also are theoretically proven to be optimal</p>
-        Philadelphia, USA
         <div class="meta" style="margin-top:8px">  
           <span><a href="mailto:taha.valizadeh@gmail.com">Email</a></span>
           <span>•</span>
@@ -170,6 +170,7 @@
   </script>
 </body>
 </html>
+
 
 
 
