--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <aside class="rail">
       <h1 class="name">Taha ValizadehAslani</h1>
       <p class="role">Machine Learning Engineer | Ph.D. in Engineering</p>
-      <p></p>Philadelphia, USA</p>
+      <p>Philadelphia, USA</p>
       <nav>
         <a href="#about" aria-current="page">About</a>
         <a href="#work">Selected Work</a>
@@ -170,6 +170,7 @@
   </script>
 </body>
 </html>
+
 
 
 
