--- a/index.html
+++ b/index.html
@@ -108,16 +108,6 @@
       <section id="work">
         <h2>Selected Work</h2>
         <div class="projects">
-          <article class="project">
-              <h3>
-                <a href="https://www.mdpi.com/2079-7737/9/11/365" target="_blank" rel="noreferrer noopener">
-                  Amino Acid k-mer Feature Extraction for Quantitative Antimicrobial Resistance (AMR) Prediction
-                </a>
-              </h3>
-            <p class="muted">Microbes can adapt over time, developing resistance to antibiotics—a phenomenon known as antimicrobial resistance (AMR). Once this resistance emerges, treating infections becomes much more difficult, often requiring stronger or alternative antibiotics, many of which may carry greater risks. Misuse and overuse of antibiotics have accelerated this process, putting constant evolutionary pressure on microbes and driving the rise of AMR. Today, this issue is widely regarded as one of the most serious public-health threats, with the potential to trigger crises comparable to pandemics if effective treatments are unavailable.</p>
-            <p class="muted">The aim of this project was to design and test machine learning approaches that leverage bacterial genome sequences in two ways: first, to estimate the minimum antibiotic dosage needed to combat an infection; and second, to pinpoint mutations or genes that contribute to resistance. I introduced a new feature extraction method, counting Amino-Acid k-mers, enables machine learning models to recognize recurring patterns in amino acid sequences within bacterial genes. I compared the proposed method to the existing methods, such as counting nucleotide (NT) k-mers, gene searching, and Single-nucleotide polymorphism (SNP) calling. The proposed approach not only matches or surpasses the accuracy of current techniques for predicting dosage but also offers researchers deeper insight into how resistance arises at the molecular level.</p>
-            <img src="images/AMR.png" alt="Visualization of implemented methods for analyzing bacterial genomes" style="max-width:60%; height:auto; margin:8px 0;">
-          </article>
 
           <article class="project">
             <h3>
@@ -130,6 +120,17 @@
             <p class="muted">This is where PharmBERT comes into play. Developed for the US Food and Drug Administration (FDA), PharmBERT is not just another addition to the family of BERT models; it is a purpose-built, specialized model that has been meticulously trained to grasp and interpret the unique aspects of pharmaceutical text, particularly drug labels. This model is designed to bridge the gap between general language processing capabilities and the specific demands of the drug label domain. By focusing on the peculiarities of pharmaceutical language, PharmBERT aims to provide more accurate, reliable, and contextually relevant insights from drug label texts than what would be achievable with a general-purpose model. In creating PharmBERT, we have not only leveraged the powerful architecture of BERT models but also enriched it with a training regime that includes a vast and diverse range of pharmaceutical texts. This specialized training ensures that PharmBERT is adept at handling the kind of linguistic challenges that are typical in drug labels, such as complex compound names, medical terminology, and regulatory language. The outcome is a model that is finely tuned to deliver enhanced performance in the analysis of drug label text, thereby offering a valuable tool for pharmaceutical companies, healthcare professionals, and regulatory bodies in their endeavors to understand and utilize the wealth of information contained in drug labels.</p>
           </article>
 
+          <article class="project">
+              <h3>
+                <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC7694136/" target="_blank" rel="noreferrer noopener">
+                  Amino Acid k-mer Feature Extraction for Quantitative Antimicrobial Resistance (AMR) Prediction
+                </a>
+              </h3>
+            <p class="muted">Microbes can adapt over time, developing resistance to antibiotics—a phenomenon known as antimicrobial resistance (AMR). Once this resistance emerges, treating infections becomes much more difficult, often requiring stronger or alternative antibiotics, many of which may carry greater risks. Misuse and overuse of antibiotics have accelerated this process, putting constant evolutionary pressure on microbes and driving the rise of AMR. Today, this issue is widely regarded as one of the most serious public-health threats, with the potential to trigger crises comparable to pandemics if effective treatments are unavailable.</p>
+            <p class="muted">The aim of this project was to design and test machine learning approaches that leverage bacterial genome sequences in two ways: first, to estimate the minimum antibiotic dosage needed to combat an infection; and second, to pinpoint mutations or genes that contribute to resistance. I introduced a new feature extraction method, counting Amino-Acid k-mers, enables machine learning models to recognize recurring patterns in amino acid sequences within bacterial genes. I compared the proposed method to the existing methods, such as counting nucleotide (NT) k-mers, gene searching, and Single-nucleotide polymorphism (SNP) calling. The proposed approach not only matches or surpasses the accuracy of current techniques for predicting dosage but also offers researchers deeper insight into how resistance arises at the molecular level.</p>
+            <img src="images/AMR.png" alt="Visualization of implemented methods for analyzing bacterial genomes" style="max-width:60%; height:auto; margin:8px 0;">
+          </article>
+          
           <article class="project">
             <h3>
               <a href="https://www.sciencedirect.com/science/article/pii/S0925231224005721" target="_blank" rel="noreferrer noopener">
@@ -170,6 +171,7 @@
   </script>
 </body>
 </html>
+
 
 
 
