--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
 
 
 
-      <section id="research">
-        <h2>Research</h2>
+      <section id="Publications">
+        <h2>Publications</h2>
       
-        <h3>Publications</h3>
+        <h3>Papers</h3>
         <ul class="pub-list">
           <li>
             <a href="https://doi.org/10.1016/j.neucom.2024.127801">
@@ -267,3 +267,4 @@
   </script>
 </body>
 </html>
+
