--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <span class="muted">Philadelphia, PA • Sept 2018 – Mar 2024</span>
           </li>
           <li>
-            <strong>Iran University of Science and Technology</strong> — M.Sc. in Electrical Engineering (Communication, System)<br>
+            <strong>Iran University of Science and Technology</strong> — M.Sc. in Electrical Engineering<br>
             <span class="muted">Tehran, Iran • Sept 2014 – Jan 2017</span>
           </li>
           <li>
@@ -292,6 +292,7 @@
   </script>
 </body>
 </html>
+
 
 
 
