--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
 
 
-      <section id="education">
+      <section id="Education">
         <h2>Education</h2>
         <ul class="edu-list">
           <li>
@@ -294,6 +294,7 @@
   </script>
 </body>
 </html>
+
 
 
 
