--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <span><a href="mailto:taha.valizadeh@gmail.com">Email</a></span>
           <span>•</span>
           <span><a href="https://scholar.google.com/citations?user=WxaHx0sAAAAJ&hl=en">Google Scholar</a></span>
-          <span>•</span
+          <span>•</span>
           <span><a href="https://github.com/TahaAslani" target="_blank" rel="noreferrer noopener">GitHub</a></span>
           <span>•</span>
           <span><a href="https://www.linkedin.com/in/taha-valizadehaslani-699538124" target="_blank" rel="noreferrer noopener">LinkedIn</a></span>
@@ -283,7 +283,7 @@
         <h2>Contact</h2>
         <dl class="contact">
           <dt>Email</dt>
-          <dd><a href="taha.valizadeh@gmail.com">taha.valizadeh@gmail.com</a></dd>
+          <dd><a href="mailto:taha.valizadeh@gmail.com">taha.valizadeh@gmail.com</a></dd>
         </dl>
         <footer>
           © <span id="y"></span> Taha ValizadehAslani
@@ -296,6 +296,7 @@
   </script>
 </body>
 </html>
+
 
 
 
