--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
       <nav>
         <a href="#about" aria-current="page">About</a>
         <a href="#work">Selected Work</a>
+        <a href="#Experience">Experience</a>
         <a href="#Education">Education</a>
         <a href="#Publications">Publications</a>
         <a href="#contact">Contact</a>
@@ -309,6 +310,7 @@
   </script>
 </body>
 </html>
+
 
 
 
