--- a/index.html
+++ b/index.html
@@ -300,9 +300,9 @@
 
         <h3>Evoulution</h3>
           <ul class="book-list">  
-            <li><strong>Drexel University</strong> — Ph.D. in Electrical Engineering<br></li>
-            <li><strong>Drexel University</strong> — Ph.D. in Electrical Engineering<br></li>
-            <li><strong>Drexel University</strong> — Ph.D. in Electrical Engineering<br></li>
+            <li><strong>Drexel University</strong> — Ph.D. in Electrical Engineering</li>
+            <li><strong>Drexel University</strong> — Ph.D. in Electrical Engineering</li>
+            <li><strong>Drexel University</strong> — Ph.D. in Electrical Engineering</li>
          </ul>
 
         <h3>Psychology and Social Sciences</h3>
@@ -335,6 +335,7 @@
   </script>
 </body>
 </html>
+
 
 
 
