--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 
         <h3>Psychology and Social Sciences</h3>
           <ul class="book-list">  
-            <li><strong>Drexel University</strong> — Ph.D. in Electrical Engineering<br></li>
+            <li><strong>The Righteous Mind</strong> by Jonathan Haidt</li>
             <li><strong>Drexel University</strong> — Ph.D. in Electrical Engineering<br></li>
             <li><strong>Drexel University</strong> — Ph.D. in Electrical Engineering<br></li>
          </ul>
@@ -335,6 +335,7 @@
   </script>
 </body>
 </html>
+
 
 
 
