--- a/index.html
+++ b/index.html
@@ -298,21 +298,33 @@
         <h2>Book Recommendations</h2>
         These are books that I ahve read and I recommend. The books are classified by topic
 
-        <h3>Evoulution</h3>
-          <ul class="book-list">  
-            <li><strong>Drexel University</strong> — Ph.D. in Electrical Engineering</li>
-            <li><strong>Drexel University</strong> — Ph.D. in Electrical Engineering</li>
-            <li><strong>Drexel University</strong> — Ph.D. in Electrical Engineering</li>
-         </ul>
-
         <h3>Psychology and Social Sciences</h3>
           <ul class="book-list">  
             <li><strong>The Righteous Mind</strong> by Jonathan Haidt</li>
-            <li><strong>Drexel University</strong> — Ph.D. in Electrical Engineering<br></li>
-            <li><strong>Drexel University</strong> — Ph.D. in Electrical Engineering<br></li>
+            <li><strong>The Coddling of the American Mind</strong> by Greg Lukianoff and Jonathan Haidt<br></li>
+            <li><strong>Is There Anything Good About Men?</strong> by Roy F. Baumeister<br></li>
+            <li><strong>Dopamine Nation</strong> by Anna Lembke<br></li>
+            <li><strong>Social Justice Fallacies</strong> by Thomas Sowell<br></li>
+            <li><strong>Economic & Philosophic Manuscripts of 1844</strong> by Karl Marx<br></li>
+            <li><strong>Introducing Feminism: A Graphic Guide</strong> by Cathia Jenainati and Judy Groves<br></li>
          </ul>
 
+        <h3>Evoulution</h3>
+          <ul class="book-list">  
+            <li><strong>Grooming, Gossip and the Evolution of Language</strong> by Robin Dunbar</li>
+            <li><strong>Catching Fire</strong> by Richard Wrangham</li>
+            <li><strong>The Deep History of Ourselves</strong> by Joseph E. LeDoux</li>
+            <li><strong>The Mating Mind</strong> by Geoffrey Miller</li>            
+            <li><strong>Guns, Germs, and Steel</strong> by Jared M. Diamond</li>
+         </ul>        
         
+        <h3>Philosophy</h3>
+          <ul class="book-list">  
+            <li><strong>A History of Western Philosophy</strong> by Bertrand Russell</li>
+            <li><strong>A History of Philosophy</strong> by Frederick Charles Copleston</li>
+            <li><strong>The Story of Philosophy</strong> by Will Durant</li>
+            <li><strong>Sophie's World</strong> by Jostein Gaarder</li>
+         </ul>        
         
       </section>
 
@@ -335,6 +347,7 @@
   </script>
 </body>
 </html>
+
 
 
 
