--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
           <ul class="book-list">  
             <li><strong>Black Holes</strong> by Brian Cox and Jeff Forshaw</li>
             <li><strong>The Little Book of Black Holes</strong> by Steven S. Gubser and Frans Pretorius</li>
-            <li><strong>The Quantum Universe (And Why Anything That Can Happen, Does)</strong> by Brian Cox and Jeff Forshaw</li>
+            <li><strong>The Quantum Universe</strong> by Brian Cox and Jeff Forshaw</li>
             <li><strong>Galaxy</strong> by James Geach</li>
          </ul>  
       
@@ -364,6 +364,7 @@
   </script>
 </body>
 </html>
+
 
 
 
