--- a/index.html
+++ b/index.html
@@ -354,6 +354,10 @@
             <li><strong>Flypaper</strong> by Robert Musil/li>
             <li><strong>Blindness</strong> by José Saramago</li>
             <li><strong>The Sound and the Fury</strong> by William Faulkner</li>
+            <li><strong>A Madman for a Hundred Liras</strong> by Aziz Nesin</li
+            <li><strong>Germinal</strong> by Émile Zola</li 
+            <li><strong>Animal Farm</strong> by George Orwell</li                                     
+            <li><strong>The Blind Owl</strong> by Sadegh Hedayat</li>
          </ul>  
         
       </section>
@@ -377,6 +381,7 @@
   </script>
 </body>
 </html>
+
 
 
 
